<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="es.jsm.mvvm.beer.ui.privateviews.vehiclelocation.VehicleLocationViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            tools:context=".ui.privateviews.barqualitytest.BarQualityTestFragment">


            <TextView
                android:id="@+id/messageTV"
                android:text="@string/vehicle_location_legend"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/MessageTextView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="9dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/messageTV"
                app:layout_constraintVertical_bias="0.68">

                <Button
                    android:id="@+id/locationButton"
                    android:onClick="@{() -> viewModel.locateVehicle(context)}"
                    android:text="@string/locate_button_label"
                    style="@style/DefaultButton" />


                <TextView
                    android:id="@+id/textView4"
                    style="@style/DetailsBoldLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="15dp"
                    android:text="@string/location_stored_label" />

                    <TextView
                        android:id="@+id/locationTV"
                        style="@style/DetailsBoldLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@{viewModel.addressString}" />

                <Button
                    android:id="@+id/navigationButton"
                    style="@style/DefaultButton"
                    android:layout_marginTop="10dp"
                    android:onClick="@{() -> viewModel.goToNavigationApp(context)}"
                    android:text="@string/show_on_navigator_button_label"
                    android:visibility="@{viewModel.addressString == null ? View.INVISIBLE : View.VISIBLE}" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>